blog/infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: sourabhdeshmukh/comments
          resources:
            requests:
              memory: 96Mi
              cpu: 200m
            limits:
              memory: 96Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-svc
spec:
  selector: 
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
