blog/infra/k8s/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: sourabhdeshmukh/event-bus
          resources:
            requests:
              memory: 96Mi
              cpu: 200m
            limits:
              memory: 96Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-svc
spec:
  selector: 
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
