blog/infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: sourabhdeshmukh/moderation
          resources:
            requests:
              memory: 96Mi
              cpu: 200m
            limits:
              memory: 96Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-svc
spec:
  selector: 
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
