blog/infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: sourabhdeshmukh/query
          resources:
            requests:
              memory: 96Mi
              cpu: 200m
            limits:
              memory: 96Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-svc
spec:
  selector: 
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
