blog/infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress-class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: "posts.com"
    http:
      paths:
      - pathType: Prefix
        path: "/posts/create"
        backend:
          service:
            name: posts-clusterip-svc
            port: 
              number: 4000
      - pathType: Prefix
        path: "/posts"
        backend:
          service:
            name: query-clusterip-svc
            port: 
              number: 4002
      - pathType: Prefix
        path: "/posts/?(.*)/comments"
        backend:
          service:
            name: comments-clusterip-svc
            port: 
              number: 4001
      - pathType: Prefix
        path: "/?(.*)"
        backend:
          service:
            name: client-clusterip-svc
            port: 
              number: 3000
